// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link matches home snapshot 1`] = `
<a
  href="/"
  onClick={[Function]}
/>
`;

exports[`Link matches login snapshot 1`] = `
<a
  href="/login"
  onClick={[Function]}
/>
`;

exports[`Link matches loprofilegin snapshot 1`] = `
<a
  href="/profile"
  onClick={[Function]}
/>
`;

exports[`Link matches profile snapshot 1`] = `
<a
  href="/profile"
  onClick={[Function]}
/>
`;

exports[`shallow render 1`] = `
<nav>
  <ul>
    <li>
      <Link
        to="/"
      >
        Register
      </Link>
    </li>
    <li>
      <Link
        to="/login"
      >
        Log In
      </Link>
    </li>
    <li>
      <Link
        to="/profile"
      >
        Profile
      </Link>
    </li>
  </ul>
</nav>
`;
